tests/machine/x/fs/cross_join_triple.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/cross_join_triple.fs(10,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (9:16). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/cross_join_triple.fs(10,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (9:16). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/cross_join_triple.fs(11,28): error FS0010: Unexpected symbol '|' in expression

/workspace/mochi/tests/machine/x/fs/cross_join_triple.fs(11,27): error FS0604: Unmatched '{'
